# Track-Shop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  run-dev.bat
app/: app.py  config.py  main.py  models.py  reset_db.py  schemas.py  seed_db.py  templates_env.py
app/db/: db.py  reset_db.py  seed_data.yaml  seed_db.py
app/routers/: cart.py  checkout.py  home.py  order.py  search.py  tracks.py
app/routers/users/: login.py  register.py
app/services/: cart.py  order.py  track.py  user.py
app/static/: style.css
app/static/css/: components.css  main.css  styles.css
app/static/css/pages/: auth.css  checkout.css  tracks.css
app/templates/: base.html  cart_modal.html  cart_modal_content.html  cart_with_button_update.html  checkout.html  genre.html  index.html  login.html  nav_bar.html  new.html  order_detail.html  popular.html  recommended.html  register.html  track_detail.html  track_flexbox.html  track_listing.html
app/templates/partials/: add_to_cart_button.html  search_results.html
app/utils/: formatting.py
notes/: Database Diagram.md  Database Fields.md  Project Specs.md
scripts/: check_db.py  check_docker.py  check_env.py
