[project]
name = "track-shop"
version = "0.1.0"
description = "A full-stack web shop for selling songs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
lint.select = ["ALL"]
ignore = [

    "Q002",   # single vs double quotes in docstrings
    "T201",   # print statements
    "CPY001", # copywrite comments
    "DOC201", # document function arguments
    "DOC501", # missing docstring exceptions
    "TRY002", # don't require custom exceptions
    "TD003",  # Issue link for TODO comments

]

preview = true
per-file-ignores = { "test_*.py" = [
    "D103",
    "S101",
] } #ignore docs and asserts in tests

[tool.djlint]
profile = "jinja"
indent = 4
max_line_length = 120
format_attribute_template_tags = true

[dependency-groups]
dev = ["ruff>=0.12.0", "pytest>=8.4.1", "djlint>=1.34.0"]
